syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";

package grpc.sample;

message Student {
  string student_id = 1;
  string first_name = 2;
  string last_name = 3;
  string department = 4;
  repeated string completed_courses = 5;
}

message StudentListResponse {
  repeated Student students = 1;
}

message Course {
  string course_id = 1;
  string name = 2;
  string course_name = 3;
  repeated string related_courses = 4;
}

message CourseListResponse {
  repeated Course courses = 1;
}

message GetAllStudentRequest {

}

message GetAllCourseRequest {

}

service StudentService {
  rpc GetAllStudents (GetAllStudentRequest) returns (StudentListResponse) {};
  rpc GetAllCourses (GetAllCourseRequest) returns (CourseListResponse) {};
}

